--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6"
+  },
+  "bugs": {
+    "url": "https://github.com/JohnLKkk/try3d/issues"
+  },
+  "homepage": "https://github.com/JohnLKkk/try3d#readme",
+  "directories": {
+    "example": "examples"
   }
 }
