--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "try3d",
-  "version": "0.3.7",
+  "version": "0.3.9",
   "description": "Based on webGL renderer(The essence of rendering technology)",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
     "test": "echo \"The essence of rendering technology\" && exit 0"
   },
-  "files": ["build", "src"],
+  "files": [
+    "build",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/JohnLKkk/try3d.git"
@@ -19,6 +22,9 @@
     "@babel/runtime": "^7.15.4",
     "babel-loader": "^8.0.0-beta.0",
     "babel-polyfill": "^6.26.0",
+    "rete": "^1.4.8",
+    "rete-connection-plugin": "^0.9.0",
+    "rete-vue-render-plugin": "^1.0.0-rc2",
     "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0"
